syntax = "proto3";
package group1;

import "google/api/annotations.proto";

message EchoGroup1Request{
    string name = 1;
}

message EchoGroup1Reply {
    string message = 1;
    string time = 2;
}

service GatewayEchoGroup1 {
   rpc EchoGroup1(EchoGroup1Request) returns (EchoGroup1Reply) {
       option (google.api.http) = {
           post: "/v1/example/group1/echo"
           body: "*"
       };
   }
}